objects/vlocity_cmt__VqMachine__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AcceptDecayMinutes__c</fullName>
        <label>Accept Decay Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Config__c</fullName>
        <label>Config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RejectDecayMinutes__c</fullName>
        <label>Reject Decay Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RestResourceName__c</fullName>
        <label>REST Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ViewDecayMinutes__c</fullName>
        <label>View Decay Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity Intelligence Machine</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>vlocity_cmt__RestResourceName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intelligence Machine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Intelligence Machines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>